--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
       <button target="_blank" class="btn list-link" type="button" name="button"> LinkedIn </button>
     </section>
+    <section class="skills">
+      
+    </section>
   </body>
 </html>
