--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <title>Raghul</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
-  <body>
+  <body id="body">
     <nav>
       <span class="r">R</span>
       <span class="aghul">aghul</span>
       <ul class="list">
         <li class="list-item"> <a class="list-link" href="#About">About</a> </li>
-        <li class="list-item"> <a class="list-link" href="#">Skills</a> </li>
+        <li class="list-item"> <a class="list-link" href="#skills">Skills</a> </li>
         <li class="list-item"> <a class="list-link" href="#">Projects</a> </li>
         <li class="list-item"> <a class="list-link" href="#">Courseworks</a> </li>
       </ul>
@@ -25,16 +28,61 @@
         <span>UI Desighner, Web Developer</span>
       </div>
       <img src="images/rimg.png" alt="">
-      <button target="_blank" class="btn list-link" type="button" name="button"> Download CV </button>
+      <button target="_blank" class="mybtn list-link" type="button" name="button"> Download CV </button>
     </section>
     <section id="About">
       <span class="about">About</span>
       <img src="images/img1.jpg" alt="">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-      <button target="_blank" class="btn list-link" type="button" name="button"> LinkedIn </button>
+      <button target="_blank" class="mybtn list-link" type="button" name="button"> LinkedIn </button>
     </section>
-    <section class="skills">
-      
-    </section>
+    <section id="skills">
+      <p class="about">Skils</p>
+      <div class="container">
+        <div class="row">
+          <div class="mycol col-lg-6 col-sm-12 col-md-6">
+            <p class="field"> Web Development </p> <p class="field-description">HTML,CSS,JAVACRIPT</p>
+          </div>
+          <div class="mycol col-lg-6 col-sm-12 col-md-6">
+            <svg width="500" height="39" viewBox="0 0 817 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <rect x="3.60938" y="3.5" width="809" height="92" rx="46" fill="black" stroke="#00D1FF" stroke-width="7"/>
+  <rect x="7.10938" y="7" width="629" height="85" rx="42.5" fill="#00D1FF"/>
+  </svg>
+          </div>
+
+        </div>
+        <div class="row">
+          <div class="mycol col-lg-6 col-sm-12 col-md-6">
+            <p class="field"> Programming </p> <p  class="field-description">C,Python,Java,Javascript</p>
+          </div>
+          <div class="mycol col-lg-6 col-sm-12 col-md-6">
+            <svg width="500" height="39" viewBox="0 0 817 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <rect x="3.60938" y="3.5" width="809" height="92" rx="46" fill="black" stroke="#00D1FF" stroke-width="7"/>
+  <rect x="7.10938" y="7" width="529" height="85" rx="42.5" fill="#00D1FF"/>
+  </svg>
+          </div>
+
+        </div>
+        <div class="row">
+          <div class="mycol col-lg-6 col-sm-12 col-md-6">
+            <p class="field"> UI Desighn </p> <p class="field-description">Figma</p>
+          </div>
+          <div class="mycol col-lg-6 col-sm-12 col-md-6">
+            <svg width="500" height="39" viewBox="0 0 817 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <rect x="3.60938" y="3.5" width="809" height="92" rx="46" fill="black" stroke="#00D1FF" stroke-width="7"/>
+  <rect x="7.10938" y="7" width="429" height="85" rx="42.5" fill="#00D1FF"/>
+  </svg>
+          </div>
+
+        </div>
+      </div>
+      </section>
+    <!-- <section id="projects">
+      <div class="project">
+        <img class="project-logo" src="images/logo.png" alt="">
+        <span><p class="project-name">GetSocial</p>
+        <p class="project-decription">ReactJS,NodeJS,MongoDB</p></span>
+      </div>
+    </section> -->
   </body>
 </html>
