--- a/index.html
+++ b/index.html
@@ -77,12 +77,29 @@
         </div>
       </div>
       </section>
-    <!-- <section id="projects">
-      <div class="project">
-        <img class="project-logo" src="images/logo.png" alt="">
-        <span><p class="project-name">GetSocial</p>
-        <p class="project-decription">ReactJS,NodeJS,MongoDB</p></span>
+    <section id="projects">
+      <p class="about">Projects</p>
+      <div class="container">
+        <div class="project">
+          <img class="project-logo" src="images/logo.png" alt="">
+          <p class="project-name">GetSocial</p>
+          <p class="project-decription">ReactJS,NodeJS,MongoDB</p>
+          <a class="list-link goto" href="#">Go to project</a>
+        </div><br><br>
+        <div class="project">
+          <img class="project-logo" src="images/logo.png" alt="">
+          <p class="project-name">GetSocial</p>
+          <p class="project-decription">ReactJS,NodeJS,MongoDB</p>
+          <a class="list-link goto" href="#">Go to project</a>
+        </div><br><br>
+        <div class="project">
+          <img class="project-logo" src="images/logo.png" alt="">
+          <p class="project-name">GetSocial</p>
+          <p class="project-decription">ReactJS,NodeJS,MongoDB</p>
+          <a class="list-link goto" href="#">Go to project</a>
+        </div>
       </div>
-    </section> -->
+    </section>
+
   </body>
 </html>
