--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul class="list">
         <li class="list-item"> <a class="list-link" href="#About">About</a> </li>
         <li class="list-item"> <a class="list-link" href="#skills">Skills</a> </li>
-        <li class="list-item"> <a class="list-link" href="#">Projects</a> </li>
+        <li class="list-item"> <a class="list-link" href="#projects">Projects</a> </li>
         <li class="list-item"> <a class="list-link" href="#">Courseworks</a> </li>
       </ul>
 
